--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   name: Shraddha Pai
   twitter: spaiglass
   picture:
-twitter_username: spaiglass
+twitter_username: realpailab
 github_username:  shraddhapai
 logo: "/assets/images/logo_v3.png" # path of site logo, e.g. "/assets/images/logo.png"
 search: # true, false (default)
